# ReSeq

./: CMakeConfig.h.in  CMakeLists.txt  LICENSE  README.md
2016-05-15_ROOTPWA/utilities/: reportingUtils.hpp
adapters/: Nextera_XTv2.fa  Nextera_XTv2.mat  TruSeq_single.fa  TruSeq_single.mat
conda/reseq/: meta.yaml
nlopt/: CMakeLists.txt
python/: CMakeLists.txt  DataStats.i  plotDataStats.py  reseq-prepare-names.py
reseq/: AdapterStats.cpp  AdapterStats.h  AdapterStatsTest.cpp  AdapterStatsTest.h  BasicTestClass.hpp  CMakeLists.txt  CoverageStats.cpp  CoverageStats.h  CoverageStatsTest.cpp  CoverageStatsTest.h  DataStats.cpp  DataStats.h  DataStatsInterface.cpp  DataStatsInterface.h  DataStatsTest.cpp  DataStatsTest.h  ErrorStats.cpp  ErrorStats.h  ErrorStatsTest.cpp  ErrorStatsTest.h  FragmentDistributionStats.cpp  FragmentDistributionStats.h  FragmentDistributionStatsTest.cpp  FragmentDistributionStatsTest.h  FragmentDuplicationStats.cpp  FragmentDuplicationStats.h  FragmentDuplicationStatsTest.cpp  FragmentDuplicationStatsTest.h  ProbabilityEstimates.cpp  ProbabilityEstimates.h  ProbabilityEstimatesTest.cpp  ProbabilityEstimatesTest.h  QualityStats.cpp  QualityStats.h  QualityStatsTest.cpp  QualityStatsTest.h  Reference.cpp  Reference.h  ReferenceTest.cpp  ReferenceTest.h  (+25 more)
seqan/util/cmake/: seqan-config.cmake
skewer/: CMakeLists.txt
skewer/src/: common.h  fastq.cpp  fastq.h  matrix.cpp  matrix.h
test/: drosophila-coverageTest-R1.fq  drosophila-coverageTest-R2.fq  drosophila-coverageTest.bam  drosophila-crossDuplicates-R1.fq  drosophila-crossDuplicates-R2.fq  drosophila-crossDuplicates.bam  drosophila-methylation.bed  ecoli-S1L001-adapters-R1.fq  ecoli-S1L001-adapters-R2.fq  ecoli-S1L001-adapters.bam  ecoli-SRR490124-4pairs-R1.fq  ecoli-SRR490124-4pairs-R2.fq  ecoli-SRR490124-4pairs-bwa.bam  ecoli-SRR490124-4pairs.bam  ecoli-SRR490124-4pairs.sam  ecoli-SRR490124-4pairs.vcf  ecoli-SRR490124-adapter-R1.fq  ecoli-SRR490124-adapter-R2.fq  ecoli-SRR490124-adapter-bwa.bam  ecoli-SRR490124-adapter.bam  ecoli-duplicates-R1.fq  ecoli-duplicates-R2.fq  ecoli-duplicates.bam  ecoli-tiles-R1.fq  ecoli-tiles-R2.fq  ecoli-tiles.bam  ref-bias-test.txt  reference-bias-calculation.fa  reference-special-chars.fa  reference-test-withN.fa  reference-test.fa  reference-test.fa.bz2  test-var.vcf
