# Own libraries
add_library(utilities utilities.cpp)
add_library(utilitiesTest utilitiesTest.cpp)
target_link_libraries(utilitiesTest utilities)

add_library(VectTest VectTest.cpp)
add_library(SeqQualityStatsTest SeqQualityStatsTest.cpp)

add_library(Reference Reference.cpp)
target_link_libraries(Reference utilities)
add_library(ReferenceTest ReferenceTest.cpp)
target_link_libraries(ReferenceTest Reference)

add_library(AdapterStats AdapterStats.cpp)
target_link_libraries(AdapterStats Reference)
add_library(AdapterStatsTest AdapterStatsTest.cpp)
target_link_libraries(AdapterStatsTest AdapterStats)

add_library(CoverageStats CoverageStats.cpp)
target_link_libraries(CoverageStats Reference)
add_library(CoverageStatsTest CoverageStatsTest.cpp)
target_link_libraries(CoverageStatsTest CoverageStats)

add_library(ErrorStats ErrorStats.cpp)
add_library(ErrorStatsTest ErrorStatsTest.cpp)
target_link_libraries(ErrorStatsTest ErrorStats)

add_library(FragmentDistributionStats FragmentDistributionStats.cpp)
target_link_libraries(FragmentDistributionStats Reference)
target_link_libraries(FragmentDistributionStats nlopt)
add_library(FragmentDistributionStatsTest FragmentDistributionStatsTest.cpp)
target_link_libraries(FragmentDistributionStatsTest FragmentDistributionStats)

add_library(FragmentDuplicationStats FragmentDuplicationStats.cpp)
target_link_libraries(FragmentDuplicationStats Reference)
add_library(FragmentDuplicationStatsTest FragmentDuplicationStatsTest.cpp)
target_link_libraries(FragmentDuplicationStatsTest FragmentDuplicationStats)

add_library(QualityStats QualityStats.cpp)
add_library(QualityStatsTest QualityStatsTest.cpp)
target_link_libraries(QualityStatsTest QualityStats)

add_library(TileStats TileStats.cpp)
add_library(TileStatsTest TileStatsTest.cpp)
target_link_libraries(TileStatsTest TileStats)

add_library(DataStats DataStats.cpp)
target_link_libraries(DataStats AdapterStats)
target_link_libraries(DataStats CoverageStats)
target_link_libraries(DataStats ErrorStats)
target_link_libraries(DataStats FragmentDistributionStats)
target_link_libraries(DataStats FragmentDuplicationStats)
target_link_libraries(DataStats QualityStats)
target_link_libraries(DataStats TileStats)
target_link_libraries(DataStats utilities)
target_link_libraries(DataStats Reference)
target_link_libraries(DataStats skewer_matrix)
add_library(DataStatsTest DataStatsTest.cpp)
target_link_libraries(DataStatsTest DataStats)
target_link_libraries(DataStatsTest AdapterStatsTest)
target_link_libraries(DataStatsTest CoverageStatsTest)
target_link_libraries(DataStatsTest ErrorStatsTest)
target_link_libraries(DataStatsTest FragmentDistributionStatsTest)
target_link_libraries(DataStatsTest FragmentDuplicationStatsTest)
target_link_libraries(DataStatsTest QualityStatsTest)
target_link_libraries(DataStatsTest TileStatsTest)

add_library(DataStatsInterface DataStatsInterface.cpp)
target_link_libraries(DataStatsInterface DataStats)

add_library(ProbabilityEstimates ProbabilityEstimates.cpp)
target_link_libraries(ProbabilityEstimates DataStats)
add_library(ProbabilityEstimatesTest ProbabilityEstimatesTest.cpp)
target_link_libraries(ProbabilityEstimatesTest ProbabilityEstimates)

add_library(Simulator Simulator.cpp)
target_link_libraries(Simulator Reference)
target_link_libraries(Simulator DataStats)
add_library(SimulatorTest SimulatorTest.cpp)
target_link_libraries(SimulatorTest Simulator)

# Executables
add_executable(reseq main.cpp)
target_link_libraries(reseq gtest)
target_link_libraries(reseq ${Boost_LIBRARIES})
target_link_libraries(reseq ${SEQAN_LIBRARIES})
target_link_libraries(reseq utilities)
target_link_libraries(reseq Reference)
target_link_libraries(reseq DataStats)
target_link_libraries(reseq ProbabilityEstimates)
target_link_libraries(reseq Simulator)
# Google test classes need to run their constructor to register, but as they are not referenced the linker throws them out without whole-archive option
target_link_libraries(reseq -Wl,-whole-archive utilitiesTest -Wl,-no-whole-archive)
target_link_libraries(reseq -Wl,-whole-archive VectTest -Wl,-no-whole-archive)
target_link_libraries(reseq -Wl,-whole-archive SeqQualityStatsTest -Wl,-no-whole-archive)
target_link_libraries(reseq -Wl,-whole-archive ReferenceTest -Wl,-no-whole-archive)
target_link_libraries(reseq -Wl,-whole-archive AdapterStatsTest -Wl,-no-whole-archive)
target_link_libraries(reseq -Wl,-whole-archive TileStatsTest -Wl,-no-whole-archive)
target_link_libraries(reseq -Wl,-whole-archive DataStatsTest -Wl,-no-whole-archive)
target_link_libraries(reseq -Wl,-whole-archive ProbabilityEstimatesTest -Wl,-no-whole-archive)
target_link_libraries(reseq -Wl,-whole-archive SimulatorTest -Wl,-no-whole-archive)
