# Own libraries
set(PRIVATE_COMPILE_OPTIONS -Wall -Wextra -Wno-sign-compare -Wno-implicit-fallthrough)
add_library(utilities utilities.cpp)
target_compile_options(utilities PRIVATE ${PRIVATE_COMPILE_OPTIONS})
add_library(utilitiesTest utilitiesTest.cpp)
target_link_libraries(utilitiesTest utilities)
target_compile_options(utilitiesTest PRIVATE ${PRIVATE_COMPILE_OPTIONS})

add_library(VectTest VectTest.cpp)
target_compile_options(VectTest PRIVATE ${PRIVATE_COMPILE_OPTIONS})
add_library(SeqQualityStatsTest SeqQualityStatsTest.cpp)
target_compile_options(SeqQualityStatsTest PRIVATE ${PRIVATE_COMPILE_OPTIONS})

add_library(Reference Reference.cpp)
target_link_libraries(Reference utilities)
target_compile_options(Reference PRIVATE ${PRIVATE_COMPILE_OPTIONS})
add_library(ReferenceTest ReferenceTest.cpp)
target_link_libraries(ReferenceTest Reference)
target_compile_options(ReferenceTest PRIVATE ${PRIVATE_COMPILE_OPTIONS})

add_library(AdapterStats AdapterStats.cpp)
target_link_libraries(AdapterStats Reference)
target_compile_options(AdapterStats PRIVATE ${PRIVATE_COMPILE_OPTIONS})
add_library(AdapterStatsTest AdapterStatsTest.cpp)
target_link_libraries(AdapterStatsTest AdapterStats)
target_compile_options(AdapterStatsTest PRIVATE ${PRIVATE_COMPILE_OPTIONS})

add_library(CoverageStats CoverageStats.cpp)
target_link_libraries(CoverageStats Reference)
target_compile_options(CoverageStats PRIVATE ${PRIVATE_COMPILE_OPTIONS})
add_library(CoverageStatsTest CoverageStatsTest.cpp)
target_link_libraries(CoverageStatsTest CoverageStats)
target_compile_options(CoverageStatsTest PRIVATE ${PRIVATE_COMPILE_OPTIONS})

add_library(ErrorStats ErrorStats.cpp)
target_compile_options(ErrorStats PRIVATE ${PRIVATE_COMPILE_OPTIONS})
add_library(ErrorStatsTest ErrorStatsTest.cpp)
target_link_libraries(ErrorStatsTest ErrorStats)
target_compile_options(ErrorStatsTest PRIVATE ${PRIVATE_COMPILE_OPTIONS})

add_library(FragmentDistributionStats FragmentDistributionStats.cpp)
target_link_libraries(FragmentDistributionStats Reference)
target_link_libraries(FragmentDistributionStats nlopt)
target_compile_options(FragmentDistributionStats PRIVATE ${PRIVATE_COMPILE_OPTIONS})
add_library(FragmentDistributionStatsTest FragmentDistributionStatsTest.cpp)
target_link_libraries(FragmentDistributionStatsTest FragmentDistributionStats)
target_compile_options(FragmentDistributionStatsTest PRIVATE ${PRIVATE_COMPILE_OPTIONS})

add_library(FragmentDuplicationStats FragmentDuplicationStats.cpp)
target_link_libraries(FragmentDuplicationStats Reference)
target_compile_options(FragmentDuplicationStats PRIVATE ${PRIVATE_COMPILE_OPTIONS})
add_library(FragmentDuplicationStatsTest FragmentDuplicationStatsTest.cpp)
target_link_libraries(FragmentDuplicationStatsTest FragmentDuplicationStats)
target_compile_options(FragmentDuplicationStatsTest PRIVATE ${PRIVATE_COMPILE_OPTIONS})

add_library(QualityStats QualityStats.cpp)
target_compile_options(QualityStats PRIVATE ${PRIVATE_COMPILE_OPTIONS})
add_library(QualityStatsTest QualityStatsTest.cpp)
target_link_libraries(QualityStatsTest QualityStats)
target_compile_options(QualityStatsTest PRIVATE ${PRIVATE_COMPILE_OPTIONS})

add_library(TileStats TileStats.cpp)
target_compile_options(ReferenceTest PRIVATE ${PRIVATE_COMPILE_OPTIONS})
add_library(TileStatsTest TileStatsTest.cpp)
target_link_libraries(TileStatsTest TileStats)
target_compile_options(TileStatsTest PRIVATE ${PRIVATE_COMPILE_OPTIONS})

add_library(DataStats DataStats.cpp)
target_link_libraries(DataStats AdapterStats)
target_link_libraries(DataStats CoverageStats)
target_link_libraries(DataStats ErrorStats)
target_link_libraries(DataStats FragmentDistributionStats)
target_link_libraries(DataStats FragmentDuplicationStats)
target_link_libraries(DataStats QualityStats)
target_link_libraries(DataStats TileStats)
target_link_libraries(DataStats utilities)
target_link_libraries(DataStats Reference)
target_link_libraries(DataStats skewer_matrix)
target_link_libraries(DataStats ${SEQAN_LIBRARIES})
target_link_libraries(DataStats ${Boost_LIBRARIES})
target_compile_options(DataStats PRIVATE ${PRIVATE_COMPILE_OPTIONS})
add_library(DataStatsTest DataStatsTest.cpp)
target_link_libraries(DataStatsTest DataStats)
target_link_libraries(DataStatsTest AdapterStatsTest)
target_link_libraries(DataStatsTest CoverageStatsTest)
target_link_libraries(DataStatsTest ErrorStatsTest)
target_link_libraries(DataStatsTest FragmentDistributionStatsTest)
target_link_libraries(DataStatsTest FragmentDuplicationStatsTest)
target_link_libraries(DataStatsTest QualityStatsTest)
target_link_libraries(DataStatsTest TileStatsTest)
target_compile_options(DataStatsTest PRIVATE ${PRIVATE_COMPILE_OPTIONS})

add_library(DataStatsInterface DataStatsInterface.cpp)
target_link_libraries(DataStatsInterface DataStats)
target_compile_options(DataStatsInterface PRIVATE ${PRIVATE_COMPILE_OPTIONS})

add_library(ProbabilityEstimates ProbabilityEstimates.cpp)
target_link_libraries(ProbabilityEstimates DataStats)
target_link_libraries(ProbabilityEstimates ${Boost_LIBRARIES})
target_compile_options(ProbabilityEstimates PRIVATE ${PRIVATE_COMPILE_OPTIONS})
add_library(ProbabilityEstimatesTest ProbabilityEstimatesTest.cpp)
target_link_libraries(ProbabilityEstimatesTest ProbabilityEstimates)
target_compile_options(ProbabilityEstimatesTest PRIVATE ${PRIVATE_COMPILE_OPTIONS})

add_library(Simulator Simulator.cpp)
target_link_libraries(Simulator Reference)
target_link_libraries(Simulator DataStats)
target_link_libraries(Simulator ${SEQAN_LIBRARIES})
target_link_libraries(Simulator ${Boost_LIBRARIES})
target_compile_options(Simulator PRIVATE ${PRIVATE_COMPILE_OPTIONS})
add_library(SimulatorTest SimulatorTest.cpp)
target_link_libraries(SimulatorTest Simulator)
target_compile_options(SimulatorTest PRIVATE ${PRIVATE_COMPILE_OPTIONS})

# Executables
add_executable(reseq main.cpp)
target_link_libraries(reseq gtest)
target_link_libraries(reseq utilities)
target_link_libraries(reseq Reference)
target_link_libraries(reseq DataStats)
target_link_libraries(reseq ProbabilityEstimates)
target_link_libraries(reseq Simulator)
target_link_libraries(reseq ${SEQAN_LIBRARIES})
target_link_libraries(reseq ${Boost_LIBRARIES})

target_link_libraries(reseq utilitiesTest)
target_link_libraries(reseq VectTest)
target_link_libraries(reseq SeqQualityStatsTest)
target_link_libraries(reseq ReferenceTest)
target_link_libraries(reseq AdapterStatsTest)
target_link_libraries(reseq TileStatsTest)
target_link_libraries(reseq DataStatsTest)
target_link_libraries(reseq ProbabilityEstimatesTest)
target_link_libraries(reseq SimulatorTest)

target_compile_options(reseq PRIVATE ${PRIVATE_COMPILE_OPTIONS})
